k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfg-uoc-app
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      run: tfg-uoc-app
  template:
    metadata:
      labels:
        run: tfg-uoc-app
    spec:
      containers:
        - name: tfg-uoc-app
          image: gcr.io/tfg-uoc-313418/tfg-uoc-app:latest
          ports:
            - containerPort: 8888
              protocol: TCP
          startupProbe:
            httpGet:
              path: /status
              port: 8888
            failureThreshold: 8
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /status
              port: 8888
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
